--- a/OnlineMovieBooking-booking/src/main/resources/application.properties
+++ b/OnlineMovieBooking-booking/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=1234
-#server.servlet.context-path=/OnlineMovie
+server.port=8082
+#server.servlet.context-path=/bankapp
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
