--- a/OnlineMovieBooking-booking/src/main/resources/application.properties
+++ b/OnlineMovieBooking-booking/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8082
 #server.servlet.context-path=/bankapp
 
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=system
-spring.datasource.password=root
-
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movie_booking
+spring.datasource.username=Animesh
+spring.datasource.password=Password
+
+
 spring.jpa.show-sql=true
 
 
